2007-01-09 [ticho]	0.2.3cvs1

	* po/POTFILES.in
		Include strings from src/attachwarner_prefs.c in message catalogs.

2007-01-09 [paul]	0.2.3

	0.2.3 released

2007-01-09 [paul]	0.2.2cvs3

	* po/es.po
		updated by Ricardo Mones Lastra
	
	* configure.ac
	* po/fi.po
	* po/it.po
	* po/pt_BR.po
	* po/sk.po
		added translations by Tommi Pirinen,
		Andrea Spadaccini, Frederico Goncalves
		Guimaraes, and Andrej Kacian

	* po/attachwarner.pot
		removed

2006-12-20 [colin]	0.2.2cvs2

	* src/Makefile.am
	* src/attachwarner.c
	* src/attachwarner_prefs.c
	* src/attachwarner_prefs.h
		Add basic prefs page allowing to set the
		regular expressions to match

2006-12-15 [ticho]	0.2.2cvs1

	* configure.ac
	* src/attachwarner.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.2.2

	0.2.2 released

2006-11-30 [colin]	0.2.1cvs6

	* po/fr.po
	* configure.ac
		Add french translation
	* TODO
		Add something that'd be nice

2006-11-28 [paul]	0.2.1cvs5

	* configure.ac
		bump required version of Claws
		following renaming
		Thanks to Charles Edwards for the
		reminder

2006-11-27 [paul]	0.2.1cvs4

	* src/attachwarner.c
	* src/attachwarner.h
		renaming

2006-11-16 [wwp]	0.2.1cvs3

	* .cvsignore
	* PATCHSETS
	* po/.cvsignore
	* src/.cvsignore
		More files to ignore.

2006-11-16 [mones]	0.2.1cvs2

	* src/attachwarner.c
	* src/attachwarner.h
		Fixed team name

2006-11-16 [mones]	0.2.1cvs1

	* AUTHORS
	* COPYING
	* ChangeLog
	* INSTALL
	* Makefile.am
	* NEWS
	* README
	* TODO
	* autogen.sh
	* commitHelper
	* configure.ac
	* po/Makefile.in.in
	* po/Makevars
	* po/POTFILES.in
	* po/attachwarner.pot
	* po/es.po
	* po/remove-potcdate.sin
	* src/Makefile.am
	* src/attachwarner.c
	* src/attachwarner.h
	* src/gettext.h
		New attachwarner plugin

2006-11-16 [mones]      0.2.1

	* src/gettext.h ** NEW **
	* src/attachwarner.h
	* src/attachwarner.c
	* src/Makefile.am
		Readded gettext.h and fixed warnings (thanks Paul)

2006-11-16 [mones]	0.2.0

	* src/attachwarner.c