@@ -1,3 +1,3 @@
-* first release
+* second release
 * preferences (enable/disable globally / per account preference?)
-* multiple language search and/or preferences page to allow regexp customisation
+* multiple language search
